src/css/global.css
:root {
  --background: white;
  --foreground: black;
}

[data-theme="dark"],
[data-theme="dark"] body {
  background: #202124;
}

/* [data-theme="dark"] .layout {
  background-color: #202124;
} */

[data-theme="dark"] .card-content {
  background-color: #303134;
  color: #bb86fc;
}

[data-theme="dark"] .content-description {
  color: #03DAC5;;
  font-weight: 400;
}

[data-theme="dark"] ul {
  font-weight: 400;
}

[data-theme="dark"] .array-index {
  color: #a67fee;
}

[data-theme="dark"] .adjacent-element {
  color: #04c804;
}

[data-theme="dark"] .sorted-array {
  color: #04c804;
}

[data-theme="dark"] .unsorted-array {
  color: #f37f54;
}

[data-theme="dark"] .current-explanation {
  color: #9b9bf9;
}

[data-theme="dark"] .j-element {
  color: #f55;
}

[data-theme="dark"] .checked-variable {
  color: dodgerblue;
}

[data-theme="dark"] .tube {
  --fill-color: blue;
}

[data-theme="dark"] .sorted {
  --fill-color: #f06c07;
}

[data-theme="dark"] .current {
  --fill-color: green;
  top: 8%;
}

[data-theme="dark"] .current-element {
  --fill-color: orangered;
  bottom: 15px;
}

[data-theme="dark"] .next-element {
  --fill-color: orangered;
  bottom: 15px;
}

[data-theme="dark"] .complexity-container {
  font-weight: 400;
}

[data-theme="dark"] .explanation-heading {
  font-weight: 500;
  margin-bottom: 2%;
}

[data-theme="dark"] .min-tube {
  --fill-color: green;
}

[data-theme="dark"] .pivot-value-tube {
  --fill-color: red;
}

[data-theme="dark"] .pivot-index-tube {
  --fill-color: purple;
}

[data-theme="dark"] .quick-current {
  --fill-color: green;
}

[data-theme="dark"] .index-element {
  bottom: 5%;
  --fill-color: #f06c07;
}

[data-theme="dark"] .thought-bubble {
  background-color: #303134;
  color: ghostwhite;
}

[data-theme="dark"] .bubble-bottom-left:after {
  border-left: 24px solid #303134;
  border-top: 12px solid #303134;
}

[data-theme="dark"] .selection.thought-bubble p {
  text-transform: none;
  margin: 10px 0 10px;
  font-size: 1.1em;
  font-weight: 400;
}

[data-theme="dark"] .selection.thought-bubble div {
  font-weight: 400;
}

[data-theme="dark"] .thought-bubble.quick-bubble p {
  text-transform: none;
  margin: 10px 0 5px;
  font-size: 0.9em;
  font-weight: 600;
}

[data-theme="dark"] .thought-bubble.quick-bubble div {
  text-transform: none;
  margin: 5px 0 3px;
  font-weight: 600;
  font-size: 0.8em;
}

[data-theme="dark"] .thought-bubble.quick-bubble p {
  text-transform: none;
  margin: 10px 0 10px;
  font-size: 1.1em;
  font-weight: 400;
}

[data-theme="dark"] .thought-bubble.quick-bubble div {
  font-weight: 400;
  font-size: 16px;
}

[data-theme="dark"] .thought-bubble.quick-bubble {
  background-color: #303134;
  color: ghostwhite;
}

[data-theme="dark"] .like-it {
  font-size: 15px;
  color: white;
  align-items: center;
  justify-content: center;
}

[data-theme="dark"] .footer{
  color: #03DAC5;
}

[data-theme="dark"] .equalizer-bar span {
  background: #BB86FC;
}

body {
  font-family: "Barlow", sans-serif;
  margin: 0;
  height: 100%;
}

h1,
h2,
h3 {
  margin: 0;
  margin-top: 5px;
}

h4 {
  margin: 0;
  margin-bottom: 10px;
}

ul {
  font-weight: 500;
}

p {
  font-family: "Playfair Display", sans-serif;
  margin: 0;
}

.background {
  z-index: 0;
  opacity: 40%;
}

.selected {
  display: none;
}

.page-container {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.page-container.dark {
  background-color: #222222;
}

.turn-off {
  pointer-events: none;
}

/*******************Layout******************/

.content {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  z-index: 0;
}

/*******************Navbar******************/

.nav-bar {
  background-color: #1d1d1d !important;
  box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black !important;
  position: relative !important;
}

.in-nav-container {
  display: flex;
  justify-content: flex-end;
  flex-grow: 1;
  font-size: large;
}

.in-nav-container span {
  cursor: pointer;
  margin: auto 0.5em;
  font-size: 20px;
}

.in-nav-container span:active {
  position: relative;
  text-shadow: 2px 2px 3px #ffffff5e;
  top: 1px;
}

.home-link {
  margin-right: 0px !important;
}

.about-me-div {
  background-color: #1d1d1d;
  box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
  color: white;
  font-size: 1.2em;
  height: fit-content;
  width: max-content;
  top: 8px;
  left: 970px;
  padding: 0em 1.5em 1em;
}

.hamburger.about-me-div {
  padding: 1em 1.25em;
}

.about-me-div a {
  display: flex;
  text-decoration: none;
  line-height: 1em;
  margin-top: 1em;
  color: ghostwhite;
}

.map-box {
  margin: auto;
}

#menu-appbar {
  padding: 0;
}

#other-menu-appbar {
  padding: 0;
}

.contacts-title {
  margin: auto;
  color: #f06c07;
  font-size: 1.5em;
}

.contacts {
  margin-left: 1em;
  margin-right: auto;
  margin-top: auto;
  font-size: 1.2em;
}

.email-contact {
  margin-bottom: 10px;
}

.responsive-link {
  margin-left: 1em;
}

.responsive-container:active {
  position: relative;
  text-shadow: 2px 2px 3px #ffffff5e;
  top: 1px;
}

.about-me-p {
  font-size: 20px;
  color: #f06c07;
  padding-bottom: 1px;
  margin-left: 0.3em;
}

.nav-copyright-container {
  text-align: center;
  font-size: 0.7em;
}

.inner-copyright-container {
  display: flex;
  justify-content: space-evenly;
  border-top: #fff8ba27 1px solid;
  padding-top: 1em;
}

/*******************Header********************/

.header {
  display: flex;
  flex-direction: column;
  pointer-events: none;
}

.header-container {
  display: flex;
  flex-direction: column;
  background-color: #0f0f0f;
  padding-top: 2%;
}

.wave {
  fill: #0f0f0f;
}

.header-container h1 {
  color: #03DAC5;
  text-transform: uppercase;
  font-size: 50px;
  margin: 0;
  line-height: 45px;
  letter-spacing: 5px;
  position: relative;
  text-shadow: 2px 2px #585858, 2px 2px #585858, 3px 3px #585858,
    4px 4px #585858;
  font-family: "Fjalla One", sans-serif;
}

.header-title-1 {
  margin-left: 22% !important;
}
/* ... */

